Fixed width issues on mobile screens

--- a/css/output.css
+++ b/css/output.css
@@ -945,6 +945,10 @@ video {
   max-width: 24rem;
 }
 
+.max-w-full{
+  max-width: 100%;
+}
+
 .flex-shrink{
   flex-shrink: 1;
 }
